# CC232

./: .gitignore  CMakeLists.txt  README.md  alloc_traits.h.gcov  count_ones.cpp.gcov  count_ones_array.cpp.gcov  gmon.out  loop_counter.cpp.gcov  move.h.gcov  new.gcov  new_allocator.h.gcov  ptr_traits.h.gcov  random.h.gcov  random.tcc.gcov  stl_algobase.h.gcov  stl_construct.h.gcov  stl_iterator.h.gcov  stl_uninitialized.h.gcov  stl_vector.h.gcov  test_internal.cpp.gcov  uniform_int_dist.h.gcov  vector.tcc.gcov
PC2/: CMakeLists.txt  README.md
PC2/Actividades/: Actividad1.md  Actividad2.md  Actividad3-CC232.md
PC2/demos/: create_adt.cpp
PC2/docs/: Actividad3-CC232.md
PC2/include/: MultiLevelDLList.h
PC2/src/: MultiLevelDLList.cpp
PC2/tests/: edge_cases.cpp  test_internal.cpp
Practicas/practica-calificada1/: CMakeLists.txt
Practicas/practica-calificada1/demos/: demo_countones.cpp
Practicas/practica-calificada1/include/: loop_counter.h
Practicas/practica-calificada1/reports/: optimizacion.md
Practicas/practica-calificada1/tests/: edge_cases.cpp  test_internal.cpp
Practicas/practica-calificada3/: CMakeLists.txt  README.md
Practicas/practica-calificada3/benchmark/: benchmark.cpp
Practicas/practica-calificada3/demos/: demo_fwideswap.cpp  demo_instrumentado.cpp  demo_treap.cpp
Practicas/practica-calificada3/docs/: Actividad5-CC232.md  Actividad6-CC232.md  bitacora.md  respuestas_obligatorias.md
Practicas/practica-calificada3/include/: FWideSwap.h  ImplicitTreap.h  Treap.h
Practicas/practica-calificada3/resultados/: casos_borde.txt  ejecucion_pc3.txt  (+1 more)
Semana1/: CMakeLists.txt  Ejercicios1-CC232.md  PreguntasActividad1-CC232.md  README.md  Resumen_Semana1.md
Semana1/demos/: demo_adt_secuencia.cpp  demo_bubblesort.cpp  demo_countones.cpp  demo_fibonacci.cpp  demo_gcd.cpp  demo_hanoi.cpp  demo_maximos.cpp  demo_power.cpp  demo_reverse_shift.cpp  demo_sum.cpp  demo_sum_explicado.cpp
Semana1/include/: Fib.h  Semana1.h  bubble_sort.h  count_ones.h  gcd.h  hanoi.h  max_algorithms.h  power.h  reverse_utils.h  sum.h
Semana1/lecturas/: Lectura1-Deng.md  Lectura2-Deng.md  Lectura3-Deng.md
Semana1/pruebas_internas/: edge_cases_week1.cpp  test_internal_week1.cpp  test_internal_week1_extra.cpp
Semana1/pruebas_publicas/: README.md  test_public_week1.cpp  test_public_week1_extra.cpp
Semana1/src/: bubble_sort.cpp  fibonacci.cpp  gcd.cpp  hanoi.cpp  max_algorithms.cpp  power.cpp  reverse_utils.cpp  sum.cpp
Semana1/sustentacion/: preguntas_semana1.md  rubrica_semana1.md
Semana5/: Actividad5-CC232.md  CMakeLists.txt  Ejercicios5-CC232.md  Preguntas5.md  README.md
Semana5/demos/: demo_binary_tree.cpp  demo_bst.cpp  demo_capitulo5_panorama.cpp  demo_heap.cpp
Semana5/include/: BinNode.h  BinTree.h  BinaryHeap.h  BinarySearchTree.h  BinaryTree.h  Capitulo5.h
Semana5/lecturas/: Lectura10-Morin.md  Lectura9-Deng.md
Semana5/pruebas_internas/: test_internal_week5.cpp
Semana5/pruebas_publicas/: test_public_week5.cpp
Semana6/: Actividad6-CC232.md  CMakeLists.txt  Ejercicios6-CC232.md  README.md
Semana6/demos/: demo_bloque10.cpp  demo_bloque11.cpp  demo_bloque3.cpp  demo_bloque4.cpp  demo_bloque6.cpp  demo_bloque7.cpp  demo_bloque8.cpp  demo_bloque9.cpp  demo_bst_rotations.cpp  demo_capitulo6_panorama.cpp  demo_compare_with_semana5.cpp  demo_heapify_floyd.cpp  demo_heapsort.cpp  demo_huffman.cpp  demo_left_heap_merge.cpp  demo_pq_complheap_basico.cpp  demo_treap_basico.cpp
Semana6/include/: Capitulo10.h  Capitulo6.h  Huffman_PQ.h  MeldableHeap.h  PQ.h  PQ_ComplHeap.h  PQ_ComplHeap_delMax.h  PQ_ComplHeap_getMax.h  PQ_ComplHeap_insert.h  PQ_ComplHeap_macro.h  PQ_ComplHeap_percolateDown.h  PQ_ComplHeap_percolateUp.h  PQ_ComplHeap_validate.h  PQ_LeftHeap.h  PQ_LeftHeap_merge.h  Treap.h  vector_heapSort.h
Semana6/lecturas/: Lectura10-Deng.md  Lectura11-Morin.md
Semana6/pruebas_internas/: test_internal_week6.cpp
Semana6/pruebas_publicas/: test_public_week6.cpp
Semana7/: Actividad7-CC232.md  CMakeLists.txt  Ejercicios7-CC232.md  README.md
Semana7/demos/: demo_avl_compact_rotations.cpp  demo_avl_deng_core.cpp  demo_bst_deng_vs_avl.cpp  demo_capitulo7_panorama.cpp  demo_compare_avl_vs_redblack.cpp  demo_compare_bst_avl_height.cpp  demo_compare_with_semana5.cpp  demo_redblack_llrb.cpp  demo_redblack_morin.cpp  demo_validate_avl_balance.cpp
Semana7/include/: AVL.h  AVLTreeCompact.h  BinarySearchTree.h  BinaryTree.h  Capitulo7.h  Entry.h  RedBlackTree.h  RedBlackTreeLLRB.h
Semana7/lecturas/: Lectura11-Deng.md  Lectura12-Morin.md  Lectura13-Morin.md
Semana7/pruebas_internas/: test_internal_week7.cpp
Semana7/pruebas_publicas/: test_public_week7.cpp  test_public_week7_extra.cpp
Semana8/: Actividad8-CC232.md  CMakeLists.txt  README.md
Semana8/demos/: demo_hashtable_oa.cpp  demo_linear.cpp  demo_tombstones.cpp
Semana8/include/: DoubleHashTable.h  HashCode.h  HashStats.h  LinearHashTable.h  QuadraticHashTable.h  RehashPolicy.h
Semana8/pruebas_internas/: test_collision_patterns.cpp  test_tombstones.cpp
semana2/: Actividad2-Respuestas.md  CMakeLists.txt  Ejercicio4.md  Ejercicios2-CC232.md  PreguntasActividad2-CC232.md  README.md
semana2/demos/: demo_array_basico.cpp  demo_arraydeque.cpp  demo_arrayqueue.cpp  demo_arraystack.cpp  demo_arraystack_explicado.cpp  demo_capitulo2_panorama.cpp  demo_deng_vector.cpp  demo_dualarraydeque.cpp  demo_fastarraystack.cpp  demo_fastsqrt.cpp  demo_rootisharraystack.cpp  demo_rootisharraystack_explicado.cpp  demo_stl_vector_contraste.cpp
semana2/include/: ArrayDeque.h  ArrayQueue.h  ArrayStack.h  ArrayStackExplicado.h  Capitulo2.h  DengVector.h  DualArrayDeque.h  FastArrayStack.h  FastSqrt.h  RootishArrayStack.h  RootishArrayStackExplicado.h  Simple.h  array.h  utils.h
semana2/lecturas/: Lectura4-Deng.md  Lectura5-Morin.md
semana2/pruebas_internas/: resize_stress_week2.cpp  test_internal_capitulo2_extendido.cpp  test_internal_week2.cpp
semana2/pruebas_publicas/: README.md  test_public_capitulo2_extendido.cpp  test_public_week2.cpp
semana2/sustentacion/: preguntas_semana2.md  rubrica_semana2.md
(+156 files in other folders)
