cmake_minimum_required(VERSION 3.20)
project(Semana7 LANGUAGES CXX)
include(CTest)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_library(sem7_headers INTERFACE)
target_include_directories(sem7_headers INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include")
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../Semana5/include")
  target_include_directories(sem7_headers INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/../Semana5/include")
endif()
target_compile_features(sem7_headers INTERFACE cxx_std_17)
function(cc232_add_sem7_target target_name source_file)
  add_executable(${target_name} "${source_file}")
  target_link_libraries(${target_name} PRIVATE sem7_headers)
endfunction()
cc232_add_sem7_target(sem7_demo_avl_deng_core "demos/demo_avl_deng_core.cpp")
cc232_add_sem7_target(sem7_demo_avl_compact_rotations "demos/demo_avl_compact_rotations.cpp")
cc232_add_sem7_target(sem7_demo_bst_deng_vs_avl "demos/demo_bst_deng_vs_avl.cpp")
cc232_add_sem7_target(sem7_demo_redblack_morin "demos/demo_redblack_morin.cpp")
cc232_add_sem7_target(sem7_demo_redblack_llrb "demos/demo_redblack_llrb.cpp")
cc232_add_sem7_target(sem7_demo_compare_avl_vs_redblack "demos/demo_compare_avl_vs_redblack.cpp")
cc232_add_sem7_target(sem7_demo_compare_with_semana5 "demos/demo_compare_with_semana5.cpp")
cc232_add_sem7_target(sem7_demo_capitulo7_panorama "demos/demo_capitulo7_panorama.cpp")
cc232_add_sem7_target(sem7_test_public "pruebas_publicas/test_public_week7.cpp")
cc232_add_sem7_target(sem7_test_internal "pruebas_internas/test_internal_week7.cpp")
add_test(NAME semana7_public COMMAND sem7_test_public)
add_test(NAME semana7_internal COMMAND sem7_test_internal)
